tests/baselines/reference/parserGenericConstraint3.errors.txt
parserGenericConstraint3.ts(1,19): error TS2304: Cannot find name 'List'.


==== parserGenericConstraint3.ts (1 errors) ====
    class C<T extends List<T>> {
                      ~~~~
!!! error TS2304: Cannot find name 'List'.
    }